Changelog
=========

1.0.1 (unreleased)
------------------

- Fix item order - sort on path.
  [mathias.leimgruber]


1.0 (2013-01-09)
----------------

- Implementation of basic features.